Can take search term and return list of hyperlinks. Added badget notification.

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="popup.js"></script>
+        <link href="popup.css" rel="stylesheet" type="text/css">
         <style></style>
     </head>
 
