Changed results to a list and added initial storage data check in preparation for word synonym API

--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,11 @@
     </head>
 
     <body>
+        <hi>Try buying from one of these companies that gives back with every purchase:</hi>
         <div id="companies">
-            
+            <ul id="company_list">
+
+            </ul>
         </div>
     </body>
 </html>
