Search terms now check against category api to find matches

--- a/popup.html
+++ b/popup.html
@@ -13,5 +13,6 @@
 
             </ul>
         </div>
+        <a href="http://givebackpact.herokuapp.com/" target="_blank">See more companies...</a>
     </body>
 </html>
