Fixed console error with popup js if no results. Added temporary icon. Slight style changes to popup.

--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,17 @@
     </head>
 
     <body>
-        <hi>Try buying from one of these companies that gives back with every purchase:</hi>
+        <h1>Give Back Pact!</h1>
+        <div id="description">
+            <p id="description_text">Take the pact! Buy from one of these companies that give back with every purchase:</p>
+        </div>
         <div id="companies">
             <ul id="company_list">
 
             </ul>
         </div>
-        <a href="http://givebackpact.herokuapp.com/" target="_blank">See more companies...</a>
+        <div id="footer">
+            <a href="http://givebackpact.herokuapp.com/" target="_blank">See more companies...</a>
+        </div>
     </body>
 </html>
